# defEYE

./: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  region-selector.html  tailwind.config.ts
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  vosk_dynamic.rs
src/components/ui/: AudioMeter.tsx  Button.tsx  Card.tsx  Input.tsx  Switch.tsx  Tabs.tsx  Textarea.tsx
src/lib/: format.ts  sfx.ts  tauri.ts
