[package]
name = "defeye"
version = "1.0.0"
description = "defEYE desktop sentinel"
authors = ["defEYE"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "defeye_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "defEYE"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
image = { version = "0.25", features = ["png", "jpeg"] }
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.5", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
xcap = "0.8.3"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["blocking", "json"] }
base64 = "0.22"
cpal = "0.15"
libloading = "0.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_System_Com", "Win32_System_LibraryLoader", "Win32_Foundation", "Win32_Storage_FileSystem"] }

